--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -14,6 +14,27 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-dark bg-dark navbar-expand-sm fixed-bottom">
+    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#topNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div id="topNav" class="collapse navbar-collapse">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a href="#" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Recipe</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">About Arthur</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Contact him</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   <section class="jumbotron">
     <div class="container">
       <div class="display-4">Les recettes d'Arthur</div>
@@ -24,6 +45,7 @@
       </div>
     </div>
   </section>
+
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
